client/css/main.css
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */

nav {
  background-color: #329492;
}

header {
  font-size: 70pt;
}

.center {
  text-align: center;

}

h2, h3 {
  color: white;
}

.ultralight {
  font-family: "Avenir Next", "UltraLight";
  font-weight: lighter;
  padding-right: 3px;
}

.demibold {
  font-family: "Avenir Next", "DemiBold";
  font-weight: bolder;
}

footer {
  background-color: #329492;
}

.footer-copyright {
  background-color: #329492;
}

body {
  background-color: #156e8b;
  font-family: "Avenir Next"
  color: white;
}

p {
  color: white;
}

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
	font-size: inherit;
}

.yield {
  margin-top: 20px;
}

